Forge 1.20.1
Set minimum Forge to 47.1.3 for transitional period of Forge & Neoforge (#7315)

Revert "Add loading state check to early startup mixin (#7298)"

This reverts commit ccfb3cc9012a5d4bbeb803027163885fcfa079cb.

Reformat release.yml

Add loading state check to early startup mixin (#7298)

Fixes #7295 and allows the game to simply start up to the missing
dependencies screen again.

Update mc-publish properties

Set loaders to neoforge, forge

Ported site export to Forge except WebP Exports (due to a bug in javacpp when used within SJH)

Change workflows to NeoForge

Moved to NeoForge

Clamp Forge Version Range to last known working version. We intend to update to Neoforge once it's out and continue updating for 1.20.1.

New Maven for wthit-api.

Fix interfaces always exposing their own inventory to storage buses, making subnets impossible.

Fixes #7235: Make all charger rotations a POI for villagers instead of just the north-rotation.

Fix R/B swap in facades and modernize bundled FRAPI (#7229)

Fix #7212: AE2 recipe types not working in guidebook (Forge only) (#7223)

Fix #7216: Inscriber does not consume the input ingredient (Forge only) (#7222)

Update gradle.properties (#7209)

Forge 1.20.1